// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 01.basic 1`] = `
<div
  className="lucid-SearchableSingleSelect"
  style={
    Object {
      "maxWidth": "100px",
    }
  }
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="Name/ID"
        value=""
      />
    </DropMenu.Control>
    <DropMenu.Option
      isDisabled={true}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption0"
    >
      Alabama
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption1"
    >
      Alaska
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption2"
    >
      Arizona
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption3"
    >
      Arkansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption4"
    >
      California
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption5"
    >
      Colorado
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption6"
    >
      Connecticut
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption7"
    >
      Delaware
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption8"
    >
      Florida
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption9"
    >
      Georgia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption10"
    >
      Hawaii
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption11"
    >
      Idaho
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption12"
    >
      Illinois
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption13"
    >
      Indiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption14"
    >
      Iowa
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption15"
    >
      Kansas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption16"
    >
      Kentucky
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption17"
    >
      Louisiana
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption18"
    >
      Maine
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption19"
    >
      Maryland
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption20"
    >
      Massachusetts
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption21"
    >
      Michigan
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption22"
    >
      Minnesota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption23"
    >
      Mississippi
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption24"
    >
      Missouri
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption25"
    >
      Montana Nebraska
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption26"
    >
      Nevada
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption27"
    >
      New Hampshire
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption28"
    >
      New Jersey
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption29"
    >
      New Mexico
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption30"
    >
      New York
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption31"
    >
      North Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption32"
    >
      North Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption33"
    >
      Ohio
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption34"
    >
      Oklahoma
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption35"
    >
      Oregon
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption36"
    >
      Pennsylvania Rhode Island
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption37"
    >
      South Carolina
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption38"
    >
      South Dakota
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption39"
    >
      Tennessee
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption40"
    >
      Texas
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption41"
    >
      Utah
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption42"
    >
      Vermont
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption43"
    >
      Virginia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption44"
    >
      Washington
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption45"
    >
      West Virginia
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption46"
    >
      Wisconsin
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption47"
    >
      Wyoming
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 02.props 1`] = `
<div
  className="lucid-SearchableSingleSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.Option
      className="lucid-SearchableSingleSelect-loading"
      isDisabled={true}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectLoading"
    >
      <LoadingIcon />
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={true}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption0"
    >
      Alabama
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 02.props 2`] = `
<div
  className="lucid-SearchableSingleSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={true}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={true}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value=""
      />
    </DropMenu.Control>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption0"
    >
      Alabama
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 03.asynchronous 1`] = `
<div
  className="lucid-SearchableSingleSelect"
  hasSelections={false}
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="Type here to simulate an API backed search"
        value=""
      />
    </DropMenu.Control>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 04.grouped-options 1`] = `
<div
  className="lucid-SearchableSingleSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="State"
        value=""
      />
    </DropMenu.Control>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableSingleSelectOptionGroup0"
    >
      Northeast
      <SearchableSingleSelect.Option>
        Connecticut
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Delaware
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Maine
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Maryland
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Massachusetts
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        New Hampshire
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        New Jersey
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        New York
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Pennsylvania
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Rhode Island
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Vermont
      </SearchableSingleSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption0"
      >
        Connecticut
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption1"
      >
        Delaware
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption2"
      >
        Maine
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption3"
      >
        Maryland
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption4"
      >
        Massachusetts
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption5"
      >
        New Hampshire
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption6"
      >
        New Jersey
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption7"
      >
        New York
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption8"
      >
        Pennsylvania
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption9"
      >
        Rhode Island
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption10"
      >
        Vermont
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableSingleSelectOptionGroup1"
    >
      Southeast
      <SearchableSingleSelect.Option>
        Alabama
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Arkansas
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Florida
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Georgia
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Kentucky
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Louisiana
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Mississippi
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        North Carolina
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        South Carolina
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Tennessee
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Virginia
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        West Virginia
      </SearchableSingleSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption11"
      >
        Alabama
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption12"
      >
        Arkansas
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption13"
      >
        Florida
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption14"
      >
        Georgia
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption15"
      >
        Kentucky
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption16"
      >
        Louisiana
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption17"
      >
        Mississippi
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption18"
      >
        North Carolina
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption19"
      >
        South Carolina
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption20"
      >
        Tennessee
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption21"
      >
        Virginia
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption22"
      >
        West Virginia
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableSingleSelectOptionGroup2"
    >
      Midwest
      <SearchableSingleSelect.Option>
        Illinois
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Indiana
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Iowa
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Kansas
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Michigan
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Minnesota
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Missouri
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Nebraska
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        North Dakota
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Ohio
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        South Dakota
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Wisconsin
      </SearchableSingleSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption23"
      >
        Illinois
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption24"
      >
        Indiana
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption25"
      >
        Iowa
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption26"
      >
        Kansas
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption27"
      >
        Michigan
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption28"
      >
        Minnesota
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption29"
      >
        Missouri
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption30"
      >
        Nebraska
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption31"
      >
        North Dakota
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption32"
      >
        Ohio
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption33"
      >
        South Dakota
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption34"
      >
        Wisconsin
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableSingleSelectOptionGroup3"
    >
      Southwest
      <SearchableSingleSelect.Option>
        Arizona
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        New Mexico
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Oklahoma
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Texas
      </SearchableSingleSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption35"
      >
        Arizona
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption36"
      >
        New Mexico
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption37"
      >
        Oklahoma
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption38"
      >
        Texas
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.OptionGroup
      isHidden={false}
      key="SearchableSingleSelectOptionGroup4"
    >
      West
      <SearchableSingleSelect.Option>
        California
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Colorado
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Idaho
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Montana
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Nevada
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Oregon
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Utah
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Washington
      </SearchableSingleSelect.Option>
      <SearchableSingleSelect.Option>
        Wyoming
      </SearchableSingleSelect.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption39"
      >
        California
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption40"
      >
        Colorado
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption41"
      >
        Idaho
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption42"
      >
        Montana
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption43"
      >
        Nevada
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption44"
      >
        Oregon
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption45"
      >
        Utah
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption46"
      >
        Washington
      </DropMenu.Option>
      <DropMenu.Option
        isDisabled={false}
        isHidden={false}
        isWrapped={true}
        key="SearchableSingleSelectOption47"
      >
        Wyoming
      </DropMenu.Option>
    </DropMenu.OptionGroup>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption48"
    >
      Alaska
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption49"
    >
      Hawaii
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect [common] example testing should match snapshot(s) for 05.selected-option 1`] = `
<div
  className="lucid-SearchableSingleSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        placeholder="Color"
        value=""
      />
    </DropMenu.Control>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption0"
    >
      Red
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption1"
    >
      Blue
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption2"
    >
      Green
    </DropMenu.Option>
  </DropMenu>
</div>
`;

exports[`SearchableSingleSelect custom formatting should render Option child function by passing in {searchText}, setting filterText on each option and using a custom optionFilter 1`] = `
<div
  className="lucid-SearchableSingleSelect"
>
  <DropMenu
    ContextMenu={
      Object {
        "alignmentOffset": -13,
        "directonOffset": -1,
        "minWidthOffset": -28,
      }
    }
    alignment="start"
    className="lucid-SearchableSingleSelect-DropMenu lucid-SearchableSingleSelect-DropMenu-is-small"
    direction="down"
    flyOutStyle={
      Object {
        "maxHeight": "18em",
      }
    }
    focusedIndex={null}
    isDisabled={false}
    isExpanded={false}
    onCollapse={[Function]}
    onExpand={[Function]}
    onFocusNext={[Function]}
    onFocusOption={[Function]}
    onFocusPrev={[Function]}
    onSelect={[Function]}
    optionContainerStyle={Object {}}
    portalId=""
    selectedIndices={null}
  >
    <DropMenu.Control>
      <SearchField
        autoComplete="off"
        className="lucid-SearchableSingleSelect-search"
        debounceLevel={500}
        isDisabled={false}
        onChange={[Function]}
        onChangeDebounced={[Function]}
        onSubmit={[Function]}
        value="tion"
      />
    </DropMenu.Control>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption0"
      name="OptionA"
    >
      <Component
        searchText="tion"
      />
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption1"
      name="OptionB"
    >
      <Component
        searchText="tion"
      />
    </DropMenu.Option>
    <DropMenu.Option
      isDisabled={false}
      isHidden={false}
      isWrapped={true}
      key="SearchableSingleSelectOption2"
      name="OptionC"
    >
      <Component
        searchText="tion"
      />
    </DropMenu.Option>
  </DropMenu>
</div>
`;
